// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modern comments 1`] = `
"import _camelCase from \\"lodash/camelCase\\";

function translate(value) {
  return _camelCase(value);
}"
`;

exports[`Modern deadcode 1`] = `"const STATIC = false;"`;

exports[`Modern es3: literal 1`] = `"foo[\\"catch\\"];"`;

exports[`Modern es3: member 1`] = `
"var foo = {
  catch: function _catch() {}
};"
`;

exports[`Modern es2015: classes 1`] = `
"export class Component {
  main() {}

}"
`;

exports[`Modern es2015: for_off 1`] = `
"function test() {
  for (const taskName of tasks) {
    try {
      executeCommands();
    } catch (error) {
      console.error(\\"Error\\");
    }
  }
}"
`;

exports[`Modern es2015: generator 1`] = `
"function* idMaker() {
  var index = 0;

  while (true) yield index++;
}"
`;

exports[`Modern es2015: set 1`] = `"new Set([1, 2, 3]);"`;

exports[`Modern es2016: exponentiation 1`] = `"var result = 8;"`;

exports[`Modern esnext: async 1`] = `
"async function wait() {
  await loadData();
}"
`;

exports[`Modern esnext: async_loop 1`] = `
"async function executeTasks(tasks) {
  for (const taskName of tasks) {
    try {
      await executeCommands();
    } catch (error) {
      console.error(\\"Error\\");
    }
  }
}"
`;

exports[`Modern esnext: class properties 1`] = `
"import _defineProperty from \\"@babel/runtime/helpers/builtin/es6/defineProperty\\";
export class Component {
  constructor() {
    _defineProperty(this, \\"onClick\\", () => {});
  }

}"
`;

exports[`Modern esnext: dynamic import 1`] = `
"new Promise(resolve => {
  require.ensure([], require => {
    resolve(require(\\"lodash\\"));
  });
}).then(lodash => {
  console.log(lodash.camelCase(\\"hello world\\"));
});"
`;

exports[`Modern esnext: import 1`] = `
"import _camelCase from \\"lodash/camelCase\\";
console.log(_camelCase(\\"hello world\\"));"
`;

exports[`Modern esnext: object spread 1`] = `
"import _objectSpread from \\"@babel/runtime/helpers/builtin/es6/objectSpread\\";

let original = {
  bar: 10
},
    variant = _objectSpread({
  foo: 1
}, original);"
`;

exports[`Modern lodash: async 1`] = `
"import _parallel from \\"async/parallel\\";

_parallel([]);"
`;

exports[`Modern lodash: lodash 1`] = `
"import _camelCase from \\"lodash/camelCase\\";

_camelCase(\\"hello world\\");"
`;

exports[`Modern lodash: recompose 1`] = `
"import _compose from \\"recompose/compose\\";

_compose([]);"
`;

exports[`Modern react: jsx 1`] = `
"function render() {
  return React.createElement(\\"h1\\", {
    __self: this
  }, \\"Hello\\");
}"
`;

exports[`Modern react: jsx spread 1`] = `
"function render(props) {
  return React.createElement(\\"h1\\", Object.assign({
    className: \\"large\\"
  }, props, {
    __self: this
  }), \\"Hello\\");
}"
`;

exports[`Modern react: proptypes 1`] = `
"import React from \\"react\\";
import PropTypes from \\"prop-types\\";

class MyComponent extends React.Component {
  render() {
    return React.createElement(\\"div\\", {
      __self: this
    }, this.props.userName);
  }

}

MyComponent.propTypes = {
  userName: PropTypes.string
};"
`;
